--- a/rs/templates/login.html
+++ b/rs/templates/login.html
@@ -42,7 +42,7 @@
 
 
         var input_fields = ['username_email', 'username', 'sex', 'relationship_status',
-        'preference', 'age', 'password', 'password_verify', 'country', 'password_hashed', 'native_language', 'language_to_learn'];
+        'preference', 'age', 'password', 'password_verify', 'country', 'native_language', 'language_to_learn'];
         var stored_input_fields = {};
 
         for (ix in input_fields) {
@@ -245,7 +245,7 @@
 
 
 
-            <div class="cl-over-image grid_6">{% include "login_helpers/login_errors.html" %}</div>
+            <div id="id-over-image" class="grid_6">{% include "login_helpers/login_errors.html" %}</div>
 
 
 
