Modified login error messages for previously registered users.

--- a/rs/templates/login_helpers/login_errors.html
+++ b/rs/templates/login_helpers/login_errors.html
@@ -29,11 +29,9 @@
 
     <div id="id-show_login_errors_dialog_box" style="display:none;">
 
-        <p><span class="cl-text-24pt-format cl-warning-text">
-        {% trans "There is a problem" %}:</span></p>
         <ul>
         {% for error in errors %}
-            <li> {{ error|safe }} </li>
+            <li  class="cl-indent"> {{ error|safe }} </li>
         {% endfor %}
         </ul>
     </div>
