Formatted "have you forgotten your password" link that is shown in the popup dialog when the user has problems entering in the correct information.

--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -148,7 +148,7 @@
             -->
 
             <br>
-            <div id="id-forgot-password"class="grid_6 alpha omega cl-right-text cl-text-12pt-format cl-forgot-password-block">
+            <div class="grid_6 alpha omega cl-right-text cl-text-12pt-format cl-forgot-password-block">
                 <a href="{% url reset_password %}">
                     {% trans "Have you forgotten your password?" %}
                 </a>
